# SpikeInterface-Training-UNM-Jun26

./: LICENSE  README.md
notebooks/: full-tutorial.ipynb  pyproject.toml
