[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "hdbscan>=0.8.40",
    "jupyterlab>=4.4.7",
    "kilosort==4.1.7",
    "spikeinterface[full,widgets]>=0.104.5",
    "pynapple==0.9.2",
    "PySide6<6.8",
    "pyqtgraph",
    "spikeinterface-gui",
    "ephyviewer",
    "spython",
    "panel"
]
